// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select transformer > transforms ({ id }) destructured outer with correlated inner subquery 1`] = `
"class Post {
    static tableName: "posts" = "posts";
    static query(): any { return null as any; }
}
authors.select({ param: "u", paths: [], subqueries: [{ alias: "c", subquery: { kind: "subqueryRef", key: "_sub0" } }] }, { _sub0: Post.query().where({ node: { kind: "binary", op: "===", left: { kind: "member", param: "p", path: ["authorId"] }, right: { kind: "member", param: "u", path: ["id"] } }, rootParam: "p", localParamNames: ["p"] }, {}).select({ param: "u", paths: [], aggregates: [{ kind: "aggregate", func: "COUNT", arg: null, alias: "count" }] }) });
"
`;

exports[`select transformer > transforms ({ id, ...rest }) => ({ id, ...rest }) to IR object with rest 1`] = `
"users.select({ param: "u", paths: [["id"]], aliases: ["id"], rest: true });
"
`;

exports[`select transformer > transforms ({ id, name }) => ({ id, name }) to IR object 1`] = `
"users.select({ param: "u", paths: [["id"], ["name"]], aliases: ["id", "name"] });
"
`;

exports[`select transformer > transforms ({ id: authorId }) aliased destructured outer with correlated inner subquery 1`] = `
"class Post {
    static tableName: "posts" = "posts";
    static query(): any { return null as any; }
}
authors.select({ param: "u", paths: [], subqueries: [{ alias: "c", subquery: { kind: "subqueryRef", key: "_sub0" } }] }, { _sub0: Post.query().where({ node: { kind: "binary", op: "===", left: { kind: "member", param: "p", path: ["authorId"] }, right: { kind: "member", param: "u", path: ["id"] } }, rootParam: "p", localParamNames: ["p"] }, {}).select({ param: "u", paths: [], aggregates: [{ kind: "aggregate", func: "COUNT", arg: null, alias: "count" }] }) });
"
`;

exports[`select transformer > transforms ({ names: groupConcat(p.name, ', ') }) object with groupConcat 1`] = `
"users.select({ param: "p", paths: [], aggregates: [{ kind: "aggregate", func: "GROUP_CONCAT", arg: { kind: "member", param: "p", path: ["name"] }, alias: "names", separator: ", " }] });
"
`;

exports[`select transformer > transforms ({ unique: count(distinct(p.id)) }) object with distinct aggregate 1`] = `
"users.select({ param: "p", paths: [], aggregates: [{ kind: "aggregate", func: "COUNT", arg: { kind: "member", param: "p", path: ["id"] }, alias: "unique", distinct: true }] });
"
`;

exports[`select transformer > transforms (c) => ({ ...c, company: c.company }) to IR object with rest and relation 1`] = `
"contacts.select({ param: "c", paths: [["company"]], aliases: ["company"], rest: true });
"
`;

exports[`select transformer > transforms (p) => ({ category: p.category, total: sum(p.price) }) with aggregate 1`] = `
"products.select({ param: "p", paths: [["category"]], aliases: ["category"], aggregates: [{ kind: "aggregate", func: "SUM", arg: { kind: "member", param: "p", path: ["price"] }, alias: "total" }] });
"
`;

exports[`select transformer > transforms (p) => ({ cnt: count(p.id), maxSalary: max(p.salary) }) with multiple aggregates 1`] = `
"employees.select({ param: "p", paths: [], aggregates: [{ kind: "aggregate", func: "COUNT", arg: { kind: "member", param: "p", path: ["id"] }, alias: "cnt" }, { kind: "aggregate", func: "MAX", arg: { kind: "member", param: "p", path: ["salary"] }, alias: "maxSalary" }] });
"
`;

exports[`select transformer > transforms (p) => count(p.id) to single aggregate shorthand 1`] = `
"users.select({ param: "p", paths: [], aggregates: [{ kind: "aggregate", func: "COUNT", arg: { kind: "member", param: "p", path: ["id"] }, alias: "count" }] });
"
`;

exports[`select transformer > transforms (p) => p to select * 1`] = `
"users.select({ param: "p", paths: [], rest: true });
"
`;

exports[`select transformer > transforms (p) => p.id to single column shorthand 1`] = `
"users.select({ param: "p", paths: [["id"]], aliases: ["id"] });
"
`;

exports[`select transformer > transforms (u) => ({ id: u.id }) single column 1`] = `
"users.select({ param: "u", paths: [["id"]], aliases: ["id"] });
"
`;

exports[`select transformer > transforms (u) => ({ id: u.id, name: u.name }) to IR object 1`] = `
"users.select({ param: "u", paths: [["id"], ["name"]], aliases: ["id", "name"] });
"
`;

exports[`select transformer > transforms (u) => ({ userId: u.id }) single column with alias 1`] = `
"users.select({ param: "u", paths: [["id"]], aliases: ["userId"] });
"
`;

exports[`select transformer > transforms (u) => ({ userId: u.id, fullName: u.name, country: u.country }) with aliases 1`] = `
"users.select({ param: "u", paths: [["id"], ["name"], ["country"]], aliases: ["userId", "fullName", "country"] });
"
`;

exports[`select transformer > transforms count(distinct(p.category)) single aggregate shorthand 1`] = `
"users.select({ param: "p", paths: [], aggregates: [{ kind: "aggregate", func: "COUNT", arg: { kind: "member", param: "p", path: ["category"] }, alias: "count", distinct: true }] });
"
`;

exports[`select transformer > transforms groupConcat(p.name, ', ') single aggregate shorthand 1`] = `
"users.select({ param: "p", paths: [], aggregates: [{ kind: "aggregate", func: "GROUP_CONCAT", arg: { kind: "member", param: "p", path: ["name"] }, alias: "groupconcat", separator: ", " }] });
"
`;

exports[`select transformer > transforms inline subquery with .limit() chain segment 1`] = `
"class Post {
    static tableName: "posts" = "posts";
    static query(): any { return null as any; }
}
authors.select({ param: "a", paths: [], subqueries: [{ alias: "c", subquery: { kind: "subqueryRef", key: "_sub0" } }] }, { _sub0: Post.query().where({ node: { kind: "binary", op: "===", left: { kind: "member", param: "p", path: ["authorId"] }, right: { kind: "member", param: "a", path: ["id"] } }, rootParam: "p", localParamNames: ["p"] }, {}).limit(10).select({ param: "u", paths: [], aggregates: [{ kind: "aggregate", func: "COUNT", arg: null, alias: "count" }] }) });
"
`;

exports[`select transformer > transforms inline subquery with .orderBy().limit() top-N chain 1`] = `
"class Post {
    static tableName: "posts" = "posts";
    static query(): any { return null as any; }
}
authors.select({ param: "a", paths: [], subqueries: [{ alias: "topScore", subquery: { kind: "subqueryRef", key: "_sub0" } }] }, { _sub0: Post.query().where({ node: { kind: "binary", op: "===", left: { kind: "member", param: "p", path: ["authorId"] }, right: { kind: "member", param: "a", path: ["id"] } }, rootParam: "p", localParamNames: ["p"] }, {}).orderBy({ expr: { kind: "member", param: "p", path: ["score"] }, direction: "desc" }).limit(1).select({ param: "p", paths: [], aggregates: [{ kind: "aggregate", func: "MAX", arg: { kind: "member", param: "p", path: ["score"] }, alias: "max" }] }) });
"
`;
